--- a/Desarollo-Basado-Plataformas/CV-ultimo.html
+++ b/Desarollo-Basado-Plataformas/CV-ultimo.html
@@ -98,6 +98,8 @@
                 <p><!-- APTITUDES --></p>
                 <h3>Fecha de nacimiento:</h3>
                 <P><!-- FECHAS --></P>
+                <h3>Habilidades</h3>
+                <P><!-- HABILIDADES --></P>
             </section>
 
             <section class="profile-info">
