--- a/Página web dinámica/CVmuestra.html
+++ b/Página web dinámica/CVmuestra.html
@@ -80,8 +80,8 @@
         <header>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLcL-pGtcCFU06xfdcCWHA7gL48jPnxaIEGA&amp">
             <div>
-                <h1>Fabricio Stelman Melo</h1>
-                <h2>porgamador</h2>
+                <h1><!-- NOMBRE --></h1>
+                <h2><!-- OCUPACION --></h2>
             </div>
         </header>
 
@@ -90,27 +90,27 @@
 
             <section class="contact-info">
                 <h3>Contacto</h3>
-                <p>Teléfono:940055880</p>
-                <p>Ubicación: chile</p>
+                <p>Teléfono:<!-- CONTACTO --></p>
+                <p>Ubicación: <!-- NACIONALIDAD --></p>
                 <h3>Idiomas</h3>
-                <p>Inglés: intermedio</p>
+                <p>Inglés: <!-- NIVEL_INGLES --></p>
                 <h3>Aptitudes</h3>
-                <p>Liderazgo</p>
+                <p><!-- APTITUDES --></p>
                 <h3>Fecha de nacimiento:</h3>
-                <P>2024-10-03</P>
+                <P><!-- FECHAS --></P>
                 <h3>Habilidades</h3>
-                <P>Desarrollo backend, Base de datos</P>
+                <P><!-- HABILIDADES --></P>
             </section>
 
             <section class="profile-info">
                 <section class="profile">
                     <h3>Perfil</h3>
-                    <p>sdfs</p>
+                    <p><!-- PERFIL --></p>
                 </section>
                 <section class="lenguaje">
                     <h3>Lenguajes de programacion</h3>
                     <div class="lenguaje-item">
-                        <h4>java </h4>
+                        <h4><!-- LENGUAJES_PROGRAMACION --> </h4>
                     </div>
                 </section>
             </section>
@@ -120,6 +120,4 @@
     </div>
     <P>f.s.m</P>
 </body>
-
-
 </html>
