--- a/total list/todolist.html
+++ b/total list/todolist.html
@@ -75,12 +75,12 @@
 
                 const li = document.createElement('li');
                 li.appendChild(cb);
-                li.innerHTML += document.querySelector('#task').value;
+                li.innerHTML += document.querySelector('#tarea').value;
                 li.appendChild(removeBtn); 
 
-                document.querySelector('#tasks').append(li);
+                document.querySelector('#op').append(li);
 
-                document.querySelector('#task').value = ' ';
+                document.querySelector('#tarea').value = ' ';
             };
         });
     </script>
@@ -92,13 +92,12 @@
         </div>
         <h1></h1>
         <form id="ntarea">
-            <input id="task" autocomplete="off" autofocus placeholder="Tarea" type="text">
+            <input id="tarea" autocomplete="off" autofocus placeholder="Tarea" type="text">
             <input type="submit" value="Agregar tarea">
         </form>
 
-        <ol id="tasks"></ol>
+        <ol id="op"></ol>
     </div>
-      <h1>F.S.M</h1>
+      <h6>F.S.M</h6>
 </body>
 </html>
-
